fix: Removed overflow x

--- a/app/src/assets/styles/base/reset.styl
+++ b/app/src/assets/styles/base/reset.styl
@@ -5,6 +5,8 @@ html
   margin 0
   padding 0
 
+  overflow-x hidden
+
 html
   scroll-behavior smooth
 
